<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/now_playing"
            android:icon="@drawable/ic_baseline_play_circle_outline_24"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/up_coming"
            android:icon="@drawable/ic_baseline_local_play_24"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/favorite" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/language" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_baseline_help_outline_24"
                android:title="@string/help" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
