<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/txt_view_oleh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/made_by"
        android:textStyle="bold"
        android:textSize="36sp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingStart="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:textSize="24sp"
        android:text="@string/ma_name"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:textSize="24sp"
        android:text="@string/ma_nim"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:paddingEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:text="@string/ma_class"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:textSize="18sp"
        android:text="@string/explaination_string"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:textSize="18sp"
        android:text="@string/desc_fitur2"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>